--- a/paper/paper.bib
+++ b/paper/paper.bib
@@ -1,4 +1,4 @@
-@ARTICLE{2020NatMe..17..261V,
+@ARTICLE{scipy,
        author = {{Virtanen}, Pauli and {Gommers}, Ralf and {Oliphant}, Travis E. and {Haberland}, Matt and {Reddy}, Tyler and {Cournapeau}, David and {Burovski}, Evgeni and {Peterson}, Pearu and {Weckesser}, Warren and {Bright}, Jonathan and {van der Walt}, St{\'e}fan J. and {Brett}, Matthew and {Wilson}, Joshua and {Millman}, K. Jarrod and {Mayorov}, Nikolay and {Nelson}, Andrew R.~J. and {Jones}, Eric and {Kern}, Robert and {Larson}, Eric and {Carey}, C.~J. and {Polat}, {\.I}lhan and {Feng}, Yu and {Moore}, Eric W. and {VanderPlas}, Jake and {Laxalde}, Denis and {Perktold}, Josef and {Cimrman}, Robert and {Henriksen}, Ian and {Quintero}, E.~A. and {Harris}, Charles R. and {Archibald}, Anne M. and {Ribeiro}, Ant{\^o}nio H. and {Pedregosa}, Fabian and {van Mulbregt}, Paul and {SciPy 1. 0 Contributors}},
         title = "{SciPy 1.0: fundamental algorithms for scientific computing in Python}",
       journal = {Nature Methods},
@@ -52,7 +52,7 @@ archivePrefix = {arXiv},
 }
 
 
-@INPROCEEDINGS{2019AAS...23336324P,
+@INPROCEEDINGS{rubin,
        author = {{Parejko}, John K. and {Astier}, Pierre and {Bosch}, Jim and {Boutigny}, Dominique},
         title = "{Jointcal: Optimized Astrometry \& Photometry for Thousands of Exposures with Large Mosaic Cameras}",
     booktitle = {American Astronomical Society Meeting Abstracts \#233},
